fix: background overflow

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -124,6 +124,9 @@ main
 // VIEWS
 .view
   width: 100%
+  section
+    background: var(--background-color)
+    transition: background $transition-theme
   &-Container
     position: relative
     display: flex
